--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,28 @@ body {
 }
 
 /*zarovnání sloupců  */
+
+/*page Gallery*/
+body.prace {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: center;
+}
+
+/*pictures in gallery*/
+.img1 {
+  max-height: 50vh;
+  max-width: 30vw;
+  height: auto;
+  margin: 20px;
+}
+
+.prace {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
